remove delete button

--- a/templates/home.html
+++ b/templates/home.html
@@ -70,13 +70,13 @@
 </div>
 
 <div class="w3-quarter">
-<a href="/delete" class="w3-bar-item w3-button">
+<!-- <a href="/delete" class="w3-bar-item w3-button"> -->
 
-  <div class="w3-card w3-container" style="min-height:460px">
+  <!-- <div class="w3-card w3-container" style="min-height:460px">
   <h3>Delete</h3><br>
   <i class="fa fa-remove w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
   <p>Delete items from database</p>
-  </div>
+  </div> -->
 </a>  
 </div>
 
@@ -84,7 +84,7 @@
 
 <!-- Footer -->
 <footer class="w3-container w3-theme-dark">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <!-- <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p> -->
   <div style="position:relative;bottom:55px;" class="w3-tooltip w3-right">
     <span class="w3-text w3-theme w3-padding">Go To Top</span>&nbsp;   
     <a class="w3-text-white" href="#myHeader"><span class="w3-xlarge">
