--- a/templates/home.html
+++ b/templates/home.html
@@ -16,7 +16,6 @@
   <a href="/view" class="w3-bar-item w3-button">View</a>
   <a href="/update" class="w3-bar-item w3-button">Update</a>
   <a href="/search" class="w3-bar-item w3-button">Search</a>
-  <a href="/delete" class="w3-bar-item w3-button">Delete</a>
   <button class="w3-bar-item w3-button" onclick="w3_close()">Close <i class="fa fa-remove"></i></button>
 </nav>
  
@@ -24,12 +23,12 @@
 <header class="w3-container w3-theme w3-padding" id="myHeader">
   <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i> 
   <div class="w3-center">
-  <h4>Records Management</h4>
-  <h1 class="w3-xxxlarge w3-animate-bottom">Student Records</h1>
+  
+  <h1 class="w3-xxxlarge w3-animate-bottom">Records Management</h1>
      
     <div class="w3-padding-32">
-	<a href="https://sdccd.instructure.com/courses/2419872/assignments/19188460?module_item_id=41528241">
-      <button class="w3-btn w3-xlarge w3-theme-dark w3-hover-teal" style="font-weight:900;">U.S School District </button></a>
+	<a href="https://mail.google.com/mail/u/0/">
+      <button class="w3-btn w3-xlarge w3-theme-dark w3-hover-teal" style="font-weight:900;">Login </button></a>
     </div>
   </div>
 </header>
@@ -64,7 +63,8 @@
   <div class="w3-card w3-container" style="min-height:460px">
   <h3>Search</h3><br>
   <i class="fa fa-search w3-margin-bottom w3-text-theme" style="font-size:120px"></i>
-  <p>Search the database</p>
+  <p>Search database</p>
+  <p>for records</p>
   </div>
 </a>  
 </div>
